cabal-version:      3.14
name:               unboxed
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Ellis Kesterton
maintainer:         31514698+eayus@users.noreply.github.com

executable unboxed
    ghc-options:      -Wall
    main-is:          Main.hs
    other-modules:
        Parse,
        Syntax,
    build-depends:
        base,
        megaparsec,
        mtl,
    hs-source-dirs:   app
    default-language: GHC2024
    default-extensions:
        BlockArguments,
